# Void

./: LICENSE.txt  README.md  pyproject.toml  void.py
VOIDv0.1/: editing.py  keybinds.py  search.py  tab.py  visual.py  void.py
config/: keybinds.md  keys.py  settings.py
core/: buffer.py
features/: file_finder.py  terminal.py
modes/: keybinds.py  search.py  vim_motions.py
ui/: aesthetics.py  display.py  splash.py
